etc/kubernetes/docker-xwiki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - 
          args:
            - $(MYSQL_ARG_1)
            - $(MYSQL_ARG_2)
            - $(MYSQL_ARG_3)
            - $(MYSQL_ARG_4)
          image: mysql:5.7.32@sha256:ce6815027949d0b48e3097a94fa3ec062866a78868d50c7900c697c13574599f
          name: mysql-container
          ports:
            - 
              containerPort: 3306
              protocol: TCP
          volumeMounts:
            - 
              mountPath: /var/lib/mysql
              name: mysql-vol
            - 
              mountPath: /docker-entrypoint-initdb.d
              name: mysql-init-vol
      volumes:
        - 
          name: mysql-vol
          persistentVolumeClaim:
            claimName: mysql-pvc
        - 
          configMap:
            name: mysql-init-cm
          name: mysql-init-vol
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xwiki-deploy
spec:
  selector:
    matchLabels:
      app: xwiki
  template:
    metadata:
      labels:
        app: xwiki
    spec:
      containers:
        - 
          image: openshiftacademiaonline/docker-xwiki-ops:latest
          imagePullPolicy: Always
          name: xwiki-container
          ports:
            - 
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - 
              mountPath: /usr/local/xwiki          
              name: xwiki-vol
      volumes:
        - 
          name: xwiki-vol
          persistentVolumeClaim:
            claimName: xwiki-pvc
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-netpol
spec:
  ingress:
    - 
      from:
        - 
          podSelector:
            matchLabels:
              app: xwiki
      ports:
        - 
          port: 3306
  podSelector:
    matchLabels:
      app: mysql
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: xwiki-netpol
spec:
  ingress:
    - 
      ports:
        - 
          port: 8080
  podSelector:
    matchLabels:
      app: xwiki
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  ports:
    - 
      port: 3306
  selector:
    app: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: xwiki-svc
spec:
  ports:
    - 
      nodePort: 30000
      port: 8080
  selector:
    app: xwiki
  type: NodePort
---
